[package]
name = "wyoming"
version = "0.1.0"
edition = "2024"
authors = ["Jakub Zdanowicz-Zasidko <me@zzjakub.com>"]
description = "Abstractions over the Wyoming protocol"
license = "Apache-2.0"
repository = "https://github.com/zzjakub/wyoming"
homepage = "https://github.com/zzjakub/wyoming"
documentation = "https://docs.rs/wyoming"

[dependencies]
bigdecimal = { version = "0.4.7", features = ["serde-json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"

[package.metadata.release]
sign-commit = true
sign-tag = true
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-replacements = [
    { file = "README.md", search = "wyoming = .*", replace = "{{crate_name}} = \"{{version}}\"" },
    { file = "src/lib.rs", search = "wyoming = .*", replace = "{{crate_name}} = \"{{version}}\"" },
]
pre-release-hook = [
    "cargo",
    "readme",
    ">",
    "README.md",
    "&&",
    "git",
    "cliff",
    "--unreleased",
    "-o",
    "CHANGELOG.md",
    "--tag",
    "{{version}}",
]
